--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+annotated-types==0.6.0
 ansi2html==1.8.0
+anyio==3.7.1
 appnope==0.1.3
 asttokens==2.4.1
 attrs==23.1.0
@@ -13,17 +15,22 @@ comm==0.2.0
 contourpy==1.2.0
 cycler==0.12.1
 dash==2.14.1
+dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
 dash-cytoscape==0.3.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 debugpy==1.8.0
 decorator==5.1.1
+distro==1.8.0
 executing==2.0.1
 fiona==1.9.5
 Flask==3.0.0
 fonttools==4.44.3
 geopandas==0.14.1
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
 idna==3.6
 importlib-metadata==6.8.0
 ipykernel==6.26.0
@@ -43,6 +50,7 @@ nest-asyncio==1.5.8
 networkx==3.2.1
 numba==0.58.1
 numpy==1.26.2
+openai==1.3.6
 packaging==23.2
 pandas==2.1.3
 parso==0.8.3
@@ -54,6 +62,8 @@ prompt-toolkit==3.0.41
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pydantic==2.5.2
+pydantic_core==2.14.5
 Pygments==2.16.1
 pyparsing==3.1.1
 pyproj==3.6.1
@@ -69,6 +79,7 @@ shapely==2.0.2
 six==1.16.0
 sklearn==0.0.post11
 slicer==0.0.7
+sniffio==1.3.0
 stack-data==0.6.3
 tenacity==8.2.3
 threadpoolctl==3.2.0
