--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ Pygments==2.16.1
 pyparsing==3.1.1
 pyproj==3.6.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 pyzmq==25.1.1
 requests==2.31.0
